# utmn_2026_project

./: .dockerignore  README.md  docker-compose.yml  env_example  main.py  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: a88a97787bff_auth.py  c8ce1116f831_start.py  d13708c2320a_add_biography.py
nginx/: default.conf  nginx.conf
src/: Dockerfile  ai_example.py  crypyo_example.py  database.py  entrypoint.sh  example.py  main.py  taskstore.py
src/api/v1/: aiendpoints.py  authendpoint.py  charendpoints.py
src/configs/: settings.py
src/model/: base.py  subjects.py
src/repositories/: accrepo.py  charrepo.py
src/schemas/: accschemas.py  authschemas.py  charschema.py  example_schema.py  taskssheme.py
src/services/: accservice.py  aiservice.py  authservice.py  charservice.py
tests/: conftest.py  test_char.py  test_misk.py  test_simple.py
worker/: Dockerfile  celery_app.py  requirements.txt
worker/ai_task/: tasks.py
